# edutools

./: README.md  pyproject.toml
src/edutools/: canvas.py  cli.py  ec2.py  google.py  iam.py
tests/: test_canvas.py
