[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[project.scripts]
edutools = "edutools.cli:app"

[project]
name = "edutools"
version = "1.0.0"
description = "Tools for managing educational technology and software maintenance."
readme = "README.md"
authors = [
    { name = "Shane Panter", email = "shanepanter@boisestate.edu" }
]
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["education", "canvas", "google docs", "google drive", "edtech", "software maintenance"]
classifiers = [
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14"
]

dependencies = [
	"requests==2.32.5",
"google-api-python-client==2.154.0",
	"google-auth-httplib2==0.2.0",
	"google-auth-oauthlib==1.2.1",
	"boto3>=1.34,<2.0",
	"typer>=0.9.0",
	"botocore[crt]>=1.42.39",
	"paramiko>=3.4,<4.0",
]

[project.urls]
Homepage = "https://github.com/edutools/osslag"
Issues = "https://github.com/shanep/osslag/issues"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = [
    "src"
]
markers = [
    "integration: End-to-end AWS integration tests (require live credentials, run with -m integration)",
]
addopts = "-m 'not integration'"

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]
